tests/miniJava/neg/003832_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if Main ( 0 ) { } else { } } }
